--- a/app/src/main/res/layout/step_adapter_item.xml
+++ b/app/src/main/res/layout/step_adapter_item.xml
@@ -30,7 +30,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:paddingBottom="18dp"
-        android:text="Step Long"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +45,7 @@
         android:layout_marginRight="18dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="video button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
