--- a/app/src/main/res/layout/recipe_adapter_item.xml
+++ b/app/src/main/res/layout/recipe_adapter_item.xml
@@ -24,7 +24,6 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
         android:textSize="@dimen/recipe_servings"
         app:layout_constraintStart_toEndOf="@+id/recipe_adpt_imageview"
         app:layout_constraintTop_toBottomOf="@+id/recipe_adpt_name" />
@@ -37,6 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:visibility="gone"
+        android:contentDescription="Recipe image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
