--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -9,7 +9,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".UI.MasterListFragment">
+        tools:mContext=".UI.MasterListFragment">
 
         <!-- TODO: Update blank fragment layout -->
 
